RESOLVED FIXED162050
[media-source] ASAN crash running imported/w3c/web-platform-tests/media-source/mediasource-remove.html
https://bugs.webkit.org/show_bug.cgi?id=162050
Summary [media-source] ASAN crash running imported/w3c/web-platform-tests/media-sourc...
Jer Noble
Reported 2016-09-15 23:28:53 PDT
[media-source] ASAN crash running imported/w3c/web-platform-tests/media-source/mediasource-remove.html
Attachments
Patch (4.00 KB, patch)
2016-09-15 23:34 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-09-15 23:34:00 PDT
Brent Fulgham
Comment 2 2016-09-16 08:59:26 PDT
Comment on attachment 289037 [details] Patch Very nice! r=me.
WebKit Commit Bot
Comment 3 2016-09-16 09:22:22 PDT
Comment on attachment 289037 [details] Patch Clearing flags on attachment: 289037 Committed r206023: <http://trac.webkit.org/changeset/206023>
WebKit Commit Bot
Comment 4 2016-09-16 09:22:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2016-09-17 03:26:50 PDT
Note You need to log in before you can comment on or make changes to this bug.