[media-source] ASAN crash running imported/w3c/web-platform-tests/media-source/mediasource-remove.html https://bugs.webkit.org/show_bug.cgi?id=162050

Reviewed by Brent Fulgham.

SampleMap::removeSample() was accessing the passed-in sample after removing it from its own storage. If
the SampleMap held the last reference to the sample, it would end up acessing freed memory. Fix the
post-removal access, but also ensure that the caller, SourceBuffer::removeCodedFrames(), retains the
sample it passes into removeSample().

* Modules/mediasource/SampleMap.cpp:
(WebCore::SampleMap::removeSample):
* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::removeCodedFrames):


Canonical link: https://commits.webkit.org/180196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206023 268f45cc-cd09-0410-ab3c-d52691b4dbfc